# vrender

./: BasicVulkanEngine.sln  README.md
BasicVulkanEngine/: BasicVulkanEngine.vcxproj  BasicVulkanEngine.vcxproj.filters  CMakeLists.txt  main.cpp
BasicVulkanEngine/Documentation/: roadmap.md
BasicVulkanEngine/Source/RenderLayer/: Instance.cpp  Instance.h
BasicVulkanEngine/include/: Framebuffer.h  Instance.h  LogicalDevice.h  RenderPass.h  Renderer.h  Semaphore.h  Swapchain.h  vrender.h
BasicVulkanEngine/src/PlatformLayer/Utility/: Event.h  ResizeState.h  WindowMode.h
BasicVulkanEngine/src/PlatformLayer/WindowBackends/: GLFWWindowBackend.cpp  GLFWWindowBackend.h  SDLWindowBackend.cpp  SDLWindowBackend.h  SFMLWindowBackend.cpp  SFMLWindowBackend.h  WIN32WindowBackend.cpp  WIN32WindowBackend.h  WindowProvider.h  WindowSurfaceProvider.h
BasicVulkanEngine/src/RenderLayer/: Fence.cpp  Fence.h  Framebuffer.cpp  Instance.cpp  Instance.h  InstanceConfiguration.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  Renderer.cpp  Renderer.h  Semaphore.cpp  Semaphore.h  Swapchain.cpp  Swapchain.h
BasicVulkanEngine/src/RenderLayer/Configuration/: InstanceConfiguration.h  RenderPassConfiguration.h
BasicVulkanEngine/src/RenderLayer/Misc/: BaseRenderPassConfigs.cpp
BasicVulkanEngine/src/RenderLayer/Utility/: ConfigureSwapchainCreateInfo.cpp  ConfigureSwapchainCreateInfo.h  PhysicalDeviceEnumeration.h  QuerySwapchainSupport.cpp  QuerySwapchainSupport.h  QueueHandle.h  QueueSelection.cpp  QueueSelection.h  SelectPhysicalDevice.cpp  SelectPhysicalDevice.h
